<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity  ="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >





    <TextView
        android:id="@+id/textView6"
        android:layout_width="183dp"
        android:layout_height="61dp"
        android:text="sign in continue"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/twitter_logo" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/google_ic" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="257dp"
        android:layout_height="30dp"
        android:text="@string/email"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@color/lightgray"
        android:hint=" email"
        android:textSize="20sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="267dp"
        android:layout_height="62dp"
        android:text="@string/password"
        android:textSize="15sp"
        />


    <EditText
        android:id="@+id/editText2"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:hint=" password"
        android:password="true"
        android:background="@color/lightgray"
        android:textSize="20sp"
        />



    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        />



    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="27dp"
        android:text="@string/login"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:text="@string/new_member"
            />
        <Button
            android:id="@+id/registerNowBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginBottom="27dp"
            android:text="@string/register_now"
         />

    </LinearLayout>



    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />


</LinearLayout>