<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<!--    &lt;!&ndash;SATAM WORK&ndash;&gt;-->

<!--        <ImageButton-->
<!--        android:id="@+id/imageButton"-->
<!--        android:layout_width="50dp"-->
<!--        android:layout_height="50dp"-->
<!--        android:background="@drawable/twitter_logo"-->
<!--        android:contentDescription="twitter log in"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.19"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.26"-->
<!--        tools:ignore="MissingConstraints" />-->

<!--    <ImageButton-->
<!--        android:id="@+id/imageButton2"-->
<!--        android:layout_width="50dp"-->
<!--        android:layout_height="50dp"-->
<!--        android:background="@drawable/google_ic"-->
<!--        android:contentDescription="googl"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/bottomNavigationView"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.81"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.26"-->
<!--        tools:ignore="MissingConstraints" />-->

<!--    <TextView-->
<!--        android:id="@+id/textView2"-->
<!--        android:layout_width="257dp"-->
<!--        android:layout_height="68dp"-->
<!--        android:text="@string/email"-->
<!--        android:textSize="15sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.44"-->
<!--        tools:ignore="MissingConstraints" />-->

<!--    <TextView-->
<!--        android:id="@+id/textView3"-->
<!--        android:layout_width="267dp"-->
<!--        android:layout_height="62dp"-->
<!--        android:text="@string/password"-->
<!--        android:textSize="15sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.55"-->
<!--        tools:ignore="MissingConstraints" />-->


<!--    <EditText-->
<!--        android:id="@+id/editText"-->
<!--        android:layout_width="250dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center"-->
<!--        android:hint="@string/username"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.45"-->
<!--        tools:ignore="MissingConstraints" />-->

<!--    <EditText-->
<!--        android:id="@+id/editText2"-->
<!--        android:layout_width="250dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center"-->
<!--        android:hint="@string/password"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/bottomNavigationView"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.56"-->
<!--        tools:ignore="MissingConstraints" />-->

<!--    <TextView-->
<!--        android:id="@+id/textView4"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->

<!--        android:layout_marginStart="2dp"-->
<!--        android:layout_marginTop="220dp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        tools:ignore="MissingConstraints" />-->

<!--    <TextView-->
<!--        android:id="@+id/textView5"-->
<!--        android:layout_width="wrap_content"-->

<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="6dp"-->
<!--        app:layout_constraintStart_toStartOf="@+id/imageButton2"-->
<!--        tools:ignore="MissingConstraints"-->
<!--        tools:layout_editor_absoluteY="218dp" />-->

<!--    <TextView-->
<!--        android:id="@+id/textView"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/or"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.32999998"-->
<!--        tools:ignore="MissingConstraints" />-->

<!--    <TextView-->
<!--        android:id="@+id/textView6"-->
<!--        android:layout_width="142dp"-->
<!--        android:layout_height="28dp"-->
<!--        android:text="@string/tab_to_continue"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.120000005"-->
<!--        tools:ignore="MissingConstraints" />-->

<!--    <Button-->
<!--        android:id="@+id/button"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="6dp"-->
<!--        android:layout_marginBottom="27dp"-->
<!--        android:text="@string/login"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/registerNowBtn"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        tools:ignore="MissingConstraints" />-->

<!--    <Button-->
<!--        android:id="@+id/registerNowBtn"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/register_now"-->
<!--        android:textColor="#3B49FB"-->
<!--        app:layout_constraintBaseline_toBaselineOf="@+id/textView7"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toEndOf="@+id/textView7"-->
<!--        tools:ignore="MissingConstraints" />-->

<!--    <TextView-->
<!--        android:id="@+id/textView7"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="87dp"-->
<!--        android:text="@string/new_member"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        tools:ignore="MissingConstraints" />-->


<!--&lt;!&ndash;SATAM WORK&ndash;&gt;-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity  ="center"
        >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="183dp"
            android:layout_height="61dp"
            android:text="sign in continue"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:src="@drawable/twitter_logo" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:src="@drawable/google_ic" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="257dp"
            android:layout_height="30dp"
            android:text="@string/email"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@color/lightgray"
            android:hint=" email"
            android:textSize="20sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="267dp"
            android:layout_height="62dp"
            android:text="@string/password"
            android:textSize="15sp"
            />


        <EditText
            android:id="@+id/editText2"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:hint=" password"
            android:password="true"
            android:background="@color/lightgray"
            android:textSize="20sp"
            />



        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            />



        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginBottom="27dp"
            android:text="@string/login"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:text="@string/new_member"
                />
            <Button
                android:id="@+id/registerNowBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:text="@string/register_now"
                android:textColor="#3B49FB"
                />

        </LinearLayout>



        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />


    </LinearLayout>




<!--    </LinearLayout MY>-->

    <LinearLayout
        android:id="@+id/frag_container_layout"
        android:layout_width="match_parent"
        android:layout_height="667dp"
        android:layout_marginBottom="2dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bottom_bar_layout"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-59dp">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragmentContainerView2"
            android:name="com.example.seemeds.CameraFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="-16dp"
        android:background="#8A71B9"
        >


        <ImageButton
            android:id="@+id/button_camera"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/round_camera_alt_24"
            android:text="Camera" />

        <ImageButton
            android:id="@+id/button_schedule"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/round_calendar_month_24"
            android:text="Button" />

        <ImageButton
            android:id="@+id/button_preferences"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/round_build_24"
            android:text="Button" />

        <!--bottombar code-->
        <!--        <com.google.android.material.bottomnavigation.BottomNavigationView-->
        <!--            android:id="@+id/bottomNavigationView"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            app:menu="@menu/bottom_nav_menu" />-->
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>